# VarianceTestingC

./: .gitignore  CMakeLists.txt  Makefile  README.md  contributors.txt
src/: CreateLSHBenchmark.cpp  LSHBox.cpp  VarianceTesting.cpp  extras.h  main.cpp  vec2bin.cpp  vec2hdf5.cpp  vec2hdf5.h
src/main/: CreateLSHBenchmark.cpp  LSHBox.cpp  VarianceTesting.cpp  bin2vec.cpp  bin2vec.h  createTopK.cpp  createTopK.h  extras.h  flann_dist_revised.h.h  vec2bin.h  vec2vect.cpp  vec2vect.h  verifylshbin.cpp  verifylshbin.h
src/main/stats/: fstat.cpp  fstat.h
src/test/: TestLSH.cpp  TestLSH.h
